apps/networking/cni/cilium/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: kube-system
  name: hubble-ui
spec:
  hostnames: ["hubble.mcmahan.io"]
  parentRefs:
    - name: local
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
